# stm32f4_discovery_bazel

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md
cube/: BUILD.bazel  stm32f4_cube.BUILD
toolchain/: BUILD.bazel  cc_toolchain_config.bzl  package.bzl
user/: BUILD.bazel  hooks.c  main.cc  stm32f4xx_it.c
